
[TestPane_View_EmptyTree - 1]
╭────────────────────────────────────────────────╮
│Current Layer Contents                          │
│                                                │
│Name                             Size    UID:GID│
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯
---

[TestPane_View_WithTree - 1]
╭────────────────────────────────────────────────╮
│Current Layer Contents                          │
│                                                │
│Name                             Size    UID:GID│
│├─󰝰 bin                                        -│
││ ├─󰈔 [                          1.0M          -│
││ ├─󰈔 [[                            0          -│
││ ├─󰈔 acpid                         0          -│
││ ├─󰈔 add-shell                     0          -│
││ ├─󰈔 addgroup                      0          -│
││ ├─󰈔 adduser                       0          -│
││ ├─󰈔 adjtimex                      0          -│
││ ├─󰈔 ar                            0          -│
││ ├─󰈔 arch                          0          -│
││ ├─󰈔 arp                           0          -│
││ ├─󰈔 arping                        0          -│
││ ├─󰈔 ash                           0          -│
││ ├─󰈔 awk                           0          -│
││ ├─󰈔 base64                        0          -│
╰────────────────────────────────────────────────╯
---

[TestPane_View_Focused - 1]
╭────────────────────────────────────────────────╮
│Current Layer Contents                          │
│                                                │
│Name                             Size    UID:GID│
│├─󰝰 bin                                        -│
││ ├─󰈔 [                          1.0M          -│
││ ├─󰈔 [[                            0          -│
││ ├─󰈔 acpid                         0          -│
││ ├─󰈔 add-shell                     0          -│
││ ├─󰈔 addgroup                      0          -│
││ ├─󰈔 adduser                       0          -│
││ ├─󰈔 adjtimex                      0          -│
││ ├─󰈔 ar                            0          -│
││ ├─󰈔 arch                          0          -│
││ ├─󰈔 arp                           0          -│
││ ├─󰈔 arping                        0          -│
││ ├─󰈔 ash                           0          -│
││ ├─󰈔 awk                           0          -│
││ ├─󰈔 base64                        0          -│
╰────────────────────────────────────────────────╯
---

[TestPane_View_SmallWidth - 1]
╭────────────────────────────╮
│Current Layer Contents      │
│                            │
│Name                        │
│├─󰝰 bin                     │
││ ├─󰈔 [                     │
││ ├─󰈔 [[                    │
││ ├─󰈔 acpid                 │
││ ├─󰈔 add-shell             │
││ ├─󰈔 addgroup              │
││ ├─󰈔 adduser               │
││ ├─󰈔 adjtimex              │
││ ├─󰈔 ar                    │
││ ├─󰈔 arch                  │
││ ├─󰈔 arp                   │
││ ├─󰈔 arping                │
││ ├─󰈔 ash                   │
││ ├─󰈔 awk                   │
││ ├─󰈔 base64                │
╰────────────────────────────╯
---

[TestPane_View_SmallHeight - 1]
╭────────────────────────────────────────────────╮
│Current Layer Contents                          │
│                                                │
│Name                             Size    UID:GID│
│├─󰝰 bin                                        -│
││ ├─󰈔 [                          1.0M          -│
││ ├─󰈔 [[                            0          -│
╰────────────────────────────────────────────────╯
---

[TestPane_View_LargeSize - 1]
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Current Layer Contents                                                                                                │
│                                                                                                                      │
│Name                                                                                      Size    UID:GID  Permissions│
│├─󰝰 bin                                                                                                 -   drwxr-xr-x│
││ ├─󰈔 [                                                                                   1.0M          -   -rwxr-xr-x│
││ ├─󰈔 [[                                                                                     0          -   -rwxr-xr-x│
││ ├─󰈔 acpid                                                                                  0          -   -rwxr-xr-x│
││ ├─󰈔 add-shell                                                                              0          -   -rwxr-xr-x│
││ ├─󰈔 addgroup                                                                               0          -   -rwxr-xr-x│
││ ├─󰈔 adduser                                                                                0          -   -rwxr-xr-x│
││ ├─󰈔 adjtimex                                                                               0          -   -rwxr-xr-x│
││ ├─󰈔 ar                                                                                     0          -   -rwxr-xr-x│
││ ├─󰈔 arch                                                                                   0          -   -rwxr-xr-x│
││ ├─󰈔 arp                                                                                    0          -   -rwxr-xr-x│
││ ├─󰈔 arping                                                                                 0          -   -rwxr-xr-x│
││ ├─󰈔 ash                                                                                    0          -   -rwxr-xr-x│
││ ├─󰈔 awk                                                                                    0          -   -rwxr-xr-x│
││ ├─󰈔 base64                                                                                 0          -   -rwxr-xr-x│
││ ├─󰈔 basename                                                                               0          -   -rwxr-xr-x│
││ ├─󰈔 beep                                                                                   0          -   -rwxr-xr-x│
││ ├─󰈔 blkdiscard                                                                             0          -   -rwxr-xr-x│
││ ├─󰈔 blkid                                                                                  0          -   -rwxr-xr-x│
││ ├─󰈔 blockdev                                                                               0          -   -rwxr-xr-x│
││ ├─󰈔 bootchartd                                                                             0          -   -rwxr-xr-x│
││ ├─󰈔 brctl                                                                                  0          -   -rwxr-xr-x│
││ ├─󰈔 bunzip2                                                                                0          -   -rwxr-xr-x│
││ ├─󰈔 busybox                                                                                0          -   -rwxr-xr-x│
││ ├─󰈔 bzcat                                                                                  0          -   -rwxr-xr-x│
││ ├─󰈔 bzip2                                                                                  0          -   -rwxr-xr-x│
││ ├─󰈔 cal                                                                                    0          -   -rwxr-xr-x│
││ ├─󰈔 cat                                                                                    0          -   -rwxr-xr-x│
││ ├─󰈔 chat                                                                                   0          -   -rwxr-xr-x│
││ ├─󰈔 chattr                                                                                 0          -   -rwxr-xr-x│
││ ├─󰈔 chgrp                                                                                  0          -   -rwxr-xr-x│
││ ├─󰈔 chmod                                                                                  0          -   -rwxr-xr-x│
││ ├─󰈔 chown                                                                                  0          -   -rwxr-xr-x│
││ ├─󰈔 chpasswd                                                                               0          -   -rwxr-xr-x│
││ ├─󰈔 chpst                                                                                  0          -   -rwxr-xr-x│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_Update_WithLayoutMsg - 1]
╭────────────────────────────────────────────────╮
│Current Layer Contents                          │
│                                                │
│Name                             Size    UID:GID│
│├─󰝰 bin                                        -│
││ ├─󰈔 [                          1.0M          -│
││ ├─󰈔 [[                            0          -│
││ ├─󰈔 acpid                         0          -│
││ ├─󰈔 add-shell                     0          -│
││ ├─󰈔 addgroup                      0          -│
││ ├─󰈔 adduser                       0          -│
││ ├─󰈔 adjtimex                      0          -│
││ ├─󰈔 ar                            0          -│
││ ├─󰈔 arch                          0          -│
╰────────────────────────────────────────────────╯
---

[TestPane_Update_TreeNavigation - 1]
╭────────────────────────────────────────────────╮
│Current Layer Contents                          │
│                                                │
│Name                             Size    UID:GID│
││ ├─󰈔 [                          1.0M          -│
││ ├─󰈔 [[                            0          -│
││ ├─󰈔 acpid                         0          -│
││ ├─󰈔 add-shell                     0          -│
││ ├─󰈔 addgroup                      0          -│
││ ├─󰈔 adduser                       0          -│
││ ├─󰈔 adjtimex                      0          -│
││ ├─󰈔 ar                            0          -│
││ ├─󰈔 arch                          0          -│
││ ├─󰈔 arp                           0          -│
││ ├─󰈔 arping                        0          -│
││ ├─󰈔 ash                           0          -│
││ ├─󰈔 awk                           0          -│
││ ├─󰈔 base64                        0          -│
││ ├─󰈔 basename                      0          -│
╰────────────────────────────────────────────────╯
---
